maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    indication()
}

def indication(){
  var x = getMondeLargeur()
  var y = getMondeHauteur()
  for(i<-0 to x){
    for(j<-0 to y){
      if(aBiscuit(i,j)){
        setIndicator(i,j,0)
      }
    }
  }
  
}